--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 
 <body>
     <header class="header">
-      <div class="logo"></div>
+      <div class="logo">
+      <img src="img/tesla-wordmark-red.svg">
+      </div>
       <nav class="menu">
         <a class="menu__item" href="#">Model S</a>
         <a class="menu__item" href="#">Model X</a>
         <a class="menu__item" href="#">Model 3</a>
         <a class="menu__item" href="#">Roadster</a>
         <a class="menu__item" href="#">Energy</a>
-        <a class="menu__item" href="#">Магазин</a>
-        <a class="menu__item" href="#">Войти</a>
-        <img class="menu__line" src="img/vector1.svg">
-      </nav>
+        </nav>
+        <div class="menu-ru">
+        <a class="menu-ru__item" href="#">Магазин</a>
+        <a class="menu-ru__item" href="#">Войти</a>
+        </div>
+        <div class="menu__line">
+          <img src="img/vector1.svg">
+        </div>
     </header>
     <section class="main">
       <h1 class="main__title">Model S</h1>
