--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <div class="menu-ru">
         <a class="menu-ru__item" href="#">Магазин</a>
         <a class="menu-ru__item" href="#">Войти</a>
-        </div>
         <div class="menu__line">
           <img src="img/vector1.svg">
+        </div>
         </div>
     </header>
     <section class="main">
       <h1 class="main__title">Model S</h1>
       <p class="main__subtitle">Добро пожаловать в будущее!</p>
-      <img class="car" src="img/tesla-png-tesla-png-hd-1636.svg">
+      <div class="main__car"></div>
     <div class="main__row">
       <div class="main__column">
       <div class="main-speed__column">
