--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="utf-8">
      <title>Tesla</title>
      <link rel="stylesheet" href="fonts.css">
-     <link rel="stylesheet" href="style.css"
+     <link rel="stylesheet" href="style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -31,13 +31,13 @@
     <section class="main">
       <h1 class="main__title">Model S</h1>
       <p class="main__subtitle">Добро пожаловать в будущее!</p>
-      <div class="main__car"></div>
+      <div class="main__icon">
+        <img src="img/tesla-png-tesla-png-hd-1636.svg">
+      </div>
     <div class="main__row">
       <div class="main__column">
       <div class="main-speed__column">
-          <div class="main-speed__icon">
-            <img src="img/speed.svg">
-          </div>
+          <div class="main-speed__icon"></div>
           <div class="main-speed__title">2,7</div>
           <div class="main-speed__text">сек</div>
           <div class="main-speed__item">0-100 км/час</div>
