--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <link rel="stylesheet" href="fonts.css">
      <link rel="stylesheet" href="style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -20,13 +21,13 @@
         <a class="menu__item" href="#">Roadster</a>
         <a class="menu__item" href="#">Energy</a>
         </nav>
-        <div class="menu-ru">
+      <nav class="menu-ru">
         <a class="menu-ru__item" href="#">Магазин</a>
         <a class="menu-ru__item" href="#">Войти</a>
         <div class="menu__line">
           <img src="img/vector1.svg">
         </div>
-        </div>
+      </nav>
     </header>
     <section class="main">
       <h1 class="main__title">Model S</h1>
@@ -37,7 +38,6 @@
     <div class="main__row">
       <div class="main__column">
       <div class="main-speed__column">
-          <div class="main-speed__icon"></div>
           <div class="main-speed__title">2,7</div>
           <div class="main-speed__text">сек</div>
           <div class="main-speed__item">0-100 км/час</div>
