--- a/index.html
+++ b/index.html
@@ -43,22 +43,33 @@
           <div class="main-speed__item">0-100 км/час</div>
       </div>
       <div class="main-distance__column">
-        <div class="main-distance__icon">
-          <img src="img/road.svg">
-        </div>
         <div class="main-distance__title">632</div>
         <div class="main-distance__text">км</div>
         <div class="main-distance__item">запас хода</div>
       </div>
     </div>
     <div class="main__button">
-      <div class="main-test__button">
-        <a class="main-text__button">Тест драйв</a>
-        <img src="img/steering-wheel.svg">
-      </div>
-      <a class="main-buy__button">Заказать</a>
+        <a class="main-text__button" href="">ТЕСТ ДРАЙВ</a>
+        <button class="main-buy__button" href="#">ЗАКАЗАТЬ</button>
+    </div>
     </div>
   </div>
+  <div class="dropdown"></div>
+    </section>
+    <section class="main2">
+      <h2 class="main2__title">Model S</h2>
+      <div class="block">
+        <div class="block__title">Будущее вождения</div>
+        <div class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</div>
+        <div class="block__functions">
+          <div class="block__display">
+            <img class="display" src="img/mobile.svg">
+            <div class="display__title">17</div>
+          </div>
+          <div class="block__wifi"></div>
+          <div class="block__volume"></div>
+        </div>
+      </div>
     </section>
 </body>
 </html>
