--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
     <div class="main__row">
       <div class="main__column">
       <div class="main-speed__column">
-          <div class="main-speed__title">2,7</div>
-          <div class="main-speed__text">сек</div>
-          <div class="main-speed__item">0-100 км/час</div>
+          <p class="main-speed__title">2,7</p>
+          <p class="main-speed__text">сек</p>
+          <p class="main-speed__item">0-100 км/час</p>
       </div>
       <div class="main-distance__column">
-        <div class="main-distance__title">632</div>
-        <div class="main-distance__text">км</div>
-        <div class="main-distance__item">запас хода</div>
+        <p class="main-distance__title">632</p>
+        <p class="main-distance__text">км</p>
+        <p class="main-distance__item">запас хода</p>
       </div>
     </div>
     <div class="main__button">
         <a class="main-text__button" href="">ТЕСТ ДРАЙВ</a>
-        <button class="main-buy__button" href="#">ЗАКАЗАТЬ</button>
+        <a class="main-buy__button" href="#">ЗАКАЗАТЬ</a>
     </div>
     </div>
   </div>
@@ -59,15 +59,27 @@
     <section class="main2">
       <h2 class="main2__title">Model S</h2>
       <div class="block">
-        <div class="block__title">Будущее вождения</div>
-        <div class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</div>
+        <h3 class="block__title">Будущее вождения</h3>
+        <p class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
         <div class="block__functions">
           <div class="block__display">
-            <img class="display" src="img/mobile.svg">
-            <div class="display__title">17</div>
+            <p class="display__title">17</p>
+            <p class="display__subtitle">дюймов</p>
+            <p class="display__item">Большой дисплей</p>
+         </div>
+        <div class="block__wifi">
+          <p class="wifi__title">Беспроводное обновление ПО</p>
+          <p class="wifi__item">Повышенная функциональность</p>
+        </div>
+          <div class="block__volume">
+            <p class="volume__title">894</p>
+            <p class="volume__subtitle">литра</p>
+            <p class="volume__item">Объем грузового пространства</p>
           </div>
-          <div class="block__wifi"></div>
-          <div class="block__volume"></div>
+        </div>
+        <div class="main2__button">
+          <a class="main2-text__button" href="">УЗНАТЬ БОЛЬШЕ</a>
+          <a class="main2-buy__button" href="#">ЗАКАЗАТЬ</a>
         </div>
       </div>
     </section>
