--- a/index.html
+++ b/index.html
@@ -37,23 +37,26 @@
       </div>
     <div class="main__row">
       <div class="main__column">
+    <div class="speed">
       <div class="main-speed__column">
-          <p class="main-speed__title">2,7</p>
-          <p class="main-speed__text">сек</p>
-          <p class="main-speed__item">0-100 км/час</p>
+          <span class="main-speed__title">2,7</span>
+          <span class="main-speed__text">сек</span>
       </div>
+          <p class="main-speed__item">0-100 км/час</p>
+    </div>
+    <div class="distance">
       <div class="main-distance__column">
-        <p class="main-distance__title">632</p>
-        <p class="main-distance__text">км</p>
+        <span class="main-distance__title">632</span>
+        <span class="main-distance__text">км</span>
+      </div>
         <p class="main-distance__item">запас хода</p>
       </div>
-    </div>
+      </div>
     <div class="main__button">
         <a class="main-text__button" href="">ТЕСТ ДРАЙВ</a>
         <a class="main-buy__button" href="#">ЗАКАЗАТЬ</a>
     </div>
     </div>
-  </div>
   <div class="dropdown"></div>
     </section>
     <section class="main2">
@@ -62,24 +65,49 @@
         <h3 class="block__title">Будущее вождения</h3>
         <p class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
         <div class="block__functions">
+          <div class="display">
           <div class="block__display">
-            <p class="display__title">17</p>
-            <p class="display__subtitle">дюймов</p>
+            <span class="display__title">17</span>
+            <span class="display__subtitle">дюймов</span>
+            </div>
             <p class="display__item">Большой дисплей</p>
-         </div>
+          </div>
         <div class="block__wifi">
           <p class="wifi__title">Беспроводное обновление ПО</p>
           <p class="wifi__item">Повышенная функциональность</p>
         </div>
+        <div class="volume">
           <div class="block__volume">
-            <p class="volume__title">894</p>
-            <p class="volume__subtitle">литра</p>
+            <span class="volume__title">894</span>
+            <span class="volume__subtitle">литра</span>
+          </div>
             <p class="volume__item">Объем грузового пространства</p>
           </div>
-        </div>
+          </div>
         <div class="main2__button">
           <a class="main2-text__button" href="">УЗНАТЬ БОЛЬШЕ</a>
           <a class="main2-buy__button" href="#">ЗАКАЗАТЬ</a>
+        </div>
+      </div>
+    </section>
+    <section class="main3">
+      <div class="block2">
+        <h4 class="block2__title">Самый безопасный автомобиль в мире</h4>
+        <p class="block2__subtitle">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+        <h5 class="protection">Оценка защиты:</h5>
+        <div class="location">
+        <p class="front">СПЕРЕДИ</p>
+        <p class="side">СБОКУ</p>
+        <div>
+        <span class="side2">СБОКУ</span>
+        <span class="rack">(стойка)</span>
+      </div>
+        <p class="driver">ВОДИТЕЛЬ</p>
+        <p class="passengeer">ПАССЖИР</p>
+        </div>
+        <div class="five">
+          <h6 class="five__title">5 звёзд</h6>
+          <p class="five__subtitle">безопасности</p>
         </div>
       </div>
     </section>
