--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="wrapper">
     <header class="header">
       <div class="logo">
       <img src="img/tesla-wordmark-red.svg">
@@ -29,6 +30,7 @@
         </div>
       </nav>
     </header>
+  </div>
     <section class="main">
       <h1 class="main__title">Model S</h1>
       <p class="main__subtitle">Добро пожаловать в будущее!</p>
@@ -60,11 +62,11 @@
   <div class="dropdown"></div>
     </section>
     <section class="main2">
-      <h2 class="main2__title">Model S</h2>
+        <h2 class="main2__title">Model S</h2>
       <div class="block">
         <h3 class="block__title">Будущее вождения</h3>
         <p class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
-        <div class="block__functions">
+      <div class="block__functions">
           <div class="display">
           <div class="block__display">
             <span class="display__title">17</span>
@@ -72,44 +74,109 @@
             </div>
             <p class="display__item">Большой дисплей</p>
           </div>
-        <div class="block__wifi">
+        <div class="wifi">
           <p class="wifi__title">Беспроводное обновление ПО</p>
           <p class="wifi__item">Повышенная функциональность</p>
         </div>
         <div class="volume">
-          <div class="block__volume">
+          <div class="block-volume">
             <span class="volume__title">894</span>
             <span class="volume__subtitle">литра</span>
           </div>
             <p class="volume__item">Объем грузового пространства</p>
-          </div>
-          </div>
-        <div class="main2__button">
-          <a class="main2-text__button" href="">УЗНАТЬ БОЛЬШЕ</a>
-          <a class="main2-buy__button" href="#">ЗАКАЗАТЬ</a>
         </div>
       </div>
+          <div class="section-button">
+            <a class="text__button" href="">УЗНАТЬ БОЛЬШЕ</a>
+            <a class="buy__button" href="#">ЗАКАЗАТЬ</a>
+          </div>
+      </div>
     </section>
-    <section class="main3">
-      <div class="block2">
-        <h4 class="block2__title">Самый безопасный автомобиль в мире</h4>
-        <p class="block2__subtitle">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+    <footer class="footer">
+      <div class="footer__left">
+        <h4 class="footer__title">Самый безопасный автомобиль в мире</h4>
+        <p class="footer__subtitle">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
         <h5 class="protection">Оценка защиты:</h5>
-        <div class="location">
+      <div class="location">
+      <div class="quality">
         <p class="front">СПЕРЕДИ</p>
+        <div class="quality__star">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+        </div>
+      </div>
+      <div class="quality">
         <p class="side">СБОКУ</p>
-        <div>
+        <div class="quality__star">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+        </div>
+      </div>
+    <div class="quality">
+      <div>
         <span class="side2">СБОКУ</span>
         <span class="rack">(стойка)</span>
       </div>
+      <div class="quality__star">
+        <img src="img/star.svg">
+        <img src="img/star.svg">
+        <img src="img/star.svg">
+        <img src="img/star.svg">
+        <img src="img/star.svg">
+      </div>
+    </div>
+    <div class="quality">
         <p class="driver">ВОДИТЕЛЬ</p>
-        <p class="passengeer">ПАССЖИР</p>
+        <div class="quality__star">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
         </div>
+    </div>
+    <div class="quality">
+        <p class="passengeer">ПАССЖИР</p>
+        <div class="quality__star">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+          <img src="img/star.svg">
+        </div>
+    </div>
+      </div>
         <div class="five">
           <h6 class="five__title">5 звёзд</h6>
           <p class="five__subtitle">безопасности</p>
         </div>
+      <div class="footer-button">
+        <a class="more__button" href="">УЗНАТЬ БОЛЬШЕ</a>
+        <a class="order__button" href="#">ЗАКАЗАТЬ</a>
       </div>
-    </section>
+      </div>
+      <div class="footer__right">
+        <p class="footer__text">Model S</p>
+        <img src="img/frame.svg" class="footer__icon">
+          <div class="security item1">
+            <img class="line__item1" src="img/line1.svg">
+            <div>Защита от удара спереди</div>
+          </div>
+          <div class="security item2">
+            <img class="line__item2" src="img/line2.svg">
+            <div>Защита от удара сбоку</div>
+        </div>
+        <div class="security item3">
+          <img class="line__item3" src="img/line3.svg">
+          <div>Минимальный риск перевернуться в аварии</div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
