--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="img/tesla-wordmark-red.svg">
       </div>
       <nav class="menu">
-        <a class="menu__item" href="#">Model S</a>
+        <a class="menu__item menu__item_active" href="#">Model S</a>
         <a class="menu__item" href="#">Model X</a>
         <a class="menu__item" href="#">Model 3</a>
         <a class="menu__item" href="#">Roadster</a>
@@ -32,10 +32,12 @@
     </header>
   </div>
     <section class="main">
+      <div class="tesla__title">
       <h1 class="main__title">Model S</h1>
       <p class="main__subtitle">Добро пожаловать в будущее!</p>
+    </div>
       <div class="main__icon">
-        <img src="img/tesla-png-tesla-png-hd-1636.svg">
+        <img src="img/tesla-png-tesla-png-hd-1636.svg" class="tesla-header">
       </div>
     <div class="main__row">
       <div class="main__column">
