--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <header class="header">
       <div class="logo">
-      <img src="img/tesla-wordmark-red.svg">
+      <img src="img/tesla-wordmark-red.svg" class="logo__icon">
       </div>
       <nav class="menu">
         <a class="menu__item menu__item_active" href="#">Model S</a>
@@ -36,7 +36,7 @@
       <p class="main__subtitle">Добро пожаловать в будущее!</p>
     </div>
       <div class="main__icon">
-        <img src="img/tesla-png-tesla-png-hd-1636.svg" class="tesla-header">
+        <img src="img/tesla-png-tesla-png-hd-1636.svg" class="tesla-main">
       </div>
     <div class="main__row">
       <div class="main__column">
