--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
     <section class="main2">
       <h2 class="main2__title">Model S</h2>
       <div class="block">
-        <h3 class="block__title">Будущее вождения</h3>
-        <p class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
+      <div class="main2__functions">
+        <div class="main2__text">
+          <h3 class="block__title">Будущее вождения</h3>
+          <p class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
+        </div>
       <div class="block__functions">
           <div class="display">
           <div class="block__display">
@@ -88,6 +91,7 @@
             <p class="volume__item">Объем грузового пространства</p>
         </div>
       </div>
+      </div>
           <div class="section-button">
             <a class="text__button" href="">УЗНАТЬ БОЛЬШЕ</a>
             <a class="buy__button" href="#">ЗАКАЗАТЬ</a>
@@ -95,25 +99,12 @@
       </div>
     </section>
     <footer class="footer">
-      <div class="footer__right">
-        <img src="img/frame.svg" class="footer__icon">
-        <p class="footer__text">Model S</p>
-          <div class="security item1">
-            <img class="line__item1" src="img/line1.svg">
-            <div class="security-1">Защита от удара спереди</div>
-          </div>
-          <div class="security item2">
-            <img class="line__item2" src="img/line2.svg">
-            <div class="security-2">Защита&nbsp;от удара&nbsp;сбоку</div>
-        </div>
-        <div class="security item3">
-          <img class="line__item3" src="img/line3.svg">
-          <div class="security-3">Минимальный&nbsp;риск перевернуться в аварии</div>
-        </div>
-      </div>
       <div class="footer__left">
-        <h4 class="footer__title">Самый безопасный автомобиль в мире</h4>
-        <p class="footer__subtitle">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+      <div class="footer__info">
+        <div class="footer__item">
+          <h4 class="footer__title">Самый безопасный автомобиль в мире</h4>
+          <p class="footer__subtitle">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+        </div>
       <div class="info">
         <h5 class="protection">Оценка защиты:</h5>
       <div class="location">
@@ -175,11 +166,28 @@
           <h6 class="five__title">5 звёзд</h6>
           <p class="five__subtitle">безопасности</p>
         </div>
+      </div>
+    </div>
       <div class="footer-button">
         <a class="more__button" href="">УЗНАТЬ БОЛЬШЕ</a>
         <a class="order__button" href="#">ЗАКАЗАТЬ</a>
       </div>
-      </div>
+    </div>
+      <div class="footer__right">
+        <p class="footer__text">Model S</p>
+        <img src="img/frame.svg" class="footer__icon">
+          <div class="security item1">
+            <img class="line__item1" src="img/line1.svg">
+            <div class="security-1">Защита от удара спереди</div>
+          </div>
+          <div class="security item2">
+            <img class="line__item2" src="img/line2.svg">
+            <div class="security-2">Защита&nbsp;от удара&nbsp;сбоку</div>
+        </div>
+        <div class="security item3">
+          <img class="line__item3" src="img/line3.svg">
+          <div class="security-3">Минимальный&nbsp;риск перевернуться в аварии</div>
+        </div>
       </div>
     </footer>
 </body>
