--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
     </div>
       <div class="footer__right">
-        <p class="footer__text">Model S</p>
+        <p class="footer__text">Model <span class="s">S</span></p>
         <img src="img/frame.svg" class="footer__icon">
           <div class="security item1">
             <img class="line__item1" src="img/line1.svg">
