--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="main2__functions">
         <div class="main2__text">
           <h3 class="block__title">Будущее вождения</h3>
-          <p class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
+          <p class="block__subtitle">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным <nobr>17-дюймовым</nobr> сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
         </div>
       <div class="block__functions">
           <div class="display">
@@ -174,7 +174,7 @@
       </div>
     </div>
       <div class="footer__right">
-        <p class="footer__text">Model <span class="s">S</span></p>
+        <p class="footer__text">Model S</p>
         <img src="img/frame.svg" class="footer__icon">
           <div class="security item1">
             <img class="line__item1" src="img/line1.svg">
@@ -182,7 +182,7 @@
           </div>
           <div class="security item2">
             <img class="line__item2" src="img/line2.svg">
-            <div class="security-2">Защита&nbsp;от удара&nbsp;сбоку</div>
+            <div class="security-2">Защита&nbsp;от удара сбоку</div>
         </div>
         <div class="security item3">
           <img class="line__item3" src="img/line3.svg">
