--- a/index.html
+++ b/index.html
@@ -190,5 +190,18 @@
         </div>
       </div>
     </footer>
+    <div class="hamburger-menu">
+      <input id="menu__toggle" type="checkbox" />
+      <label class="menu__btn" for="menu__toggle">
+        <span></span>
+      </label>
+      <ul class="menu__box">
+      <li><a class="menu__item_drop" href="#">Model S</a></li>
+      <li><a class="menu__item_drop" href="#">Model X</a></li>
+      <li><a class="menu__item_drop" href="#">Model 3</a></li>
+      <li><a class="menu__item_drop" href="#">Roadster</a></li>
+      <li><a class="menu__item_drop" href="#">Energy</a></li>
+      </ul>
+  </div>
 </body>
 </html>
